--- a/.github/workflows/vagrant-validate.yml
+++ b/.github/workflows/vagrant-validate.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Download vagrant binary.
       run: |
-        apt-get install fuse libfuse2
+        sudo apt-get install fuse libfuse2
         cd $GITHUB_WORKSPACE
         wget https://releases.hashicorp.com/vagrant/2.2.16/vagrant_2.2.16_linux_amd64.zip
         unzip vagrant_2.2.16_linux_amd64.zip
