--- a/.github/workflows/vagrant-validate.yml
+++ b/.github/workflows/vagrant-validate.yml
@@ -18,4 +18,4 @@ jobs:
         cd $GITHUB_WORKSPACE
         wget https://releases.hashicorp.com/vagrant/2.2.16/vagrant_2.2.16_linux_amd64.zip
         unzip vagrant_2.2.16_linux_amd64.zip
-        ./vagrant validate
+        ./vagrant validate --ignore-provider
