--- a/.github/workflows/vagrant-validate.yml
+++ b/.github/workflows/vagrant-validate.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Download vagrant binary.
+    - name: Validate Vagrantfile
       run: |
         sudo apt-get install fuse libfuse2
         cd $GITHUB_WORKSPACE
