--- a/.github/workflows/vagrant-validate.yml
+++ b/.github/workflows/vagrant-validate.yml
@@ -3,8 +3,8 @@ name: Vagrant Validate
 on:
   push:
     branches: [ "master" ]
-  #pull_request:
-  #  branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
 
 jobs:
